# sentinel

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
agents/: Dockerfile.code_server  Dockerfile.test_server  agent.py  mcp_code_server.py  mcp_enhanced_agent.py  mcp_test_server.py
config/: models.json
data/: mcp.db
docs/: mcp_test_server.md
examples/: advanced_tools.py  code_analysis_plugin.py  demo_enhanced_agent.py  load_config.py  mcp_agent_plugin.py  mcp_code_client.py  mcp_demo.py  mcp_enhanced_agent_demo.py  mcp_enhanced_plugin.py  mcp_integration.py  mcp_test_client.py  register_mcps.py  test_agent_plugin.py  test_analysis_plugin.py  test_runner_plugin.py
memory-bank/: .neorules  active-context.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
memory-bank/features/: ui-enhancements-prd.md
scripts/: init_db.py  setup.sh
src/: mcp_enhanced_agent.py  mcp_integration.py  mcp_server.py  security.py
src/storage/: __init__.py  database.py
tests/: __init__.py  conftest.py  run_tests.py  test_database.py
tests/integration/: __init__.py  test_agent_integration.py  test_code_server_integration.py  test_register_mcps.py  test_test_server_integration.py
tests/test_plugins/: test_test_analysis_plugin.py
tests/test_sample/: test_simple.py
tests/unit/: __init__.py  test_agent.py  test_code_analysis_plugin.py  test_mcp_code_server.py  test_mcp_integration.py  test_mcp_test_server.py  test_test_runner_plugin.py
tools/: weather_tool.py
ui/: app.py
(+2 files in other folders)
