[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "base-agent"
version = "0.1.0"
description = "A powerful AI project that combines Ollama, UV, and MCP servers"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "aiosqlite",
    "requests",
    "docker",
    "tiktoken",
]

[tool.setuptools]
packages = ["src"] 